--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1098,7 +1098,7 @@ select::-ms-expand {
 .hero__text {
   opacity: 0.85;
   line-height: 1.7;
-  text-align: left;
+  text-align: center;
   font-size: 1.1em;
 }
 
@@ -1341,7 +1341,7 @@ select::-ms-expand {
   min-width: 33%;
   margin-bottom: 1.5rem;
 
-  & > img {
+  & img {
     height: 40px;
   }
 }
